<resources>
    <string name="Apikey_Map">AIzaSyBa9_zqiGyTdJUEpFTZUqhxJU9cgv7oA6c</string>
    <string name="app_name">Seatech</string>
    <string name="username">Username</string>
    <string name="firstnameprofile">Firstname - </string>
    <string name="secondnameprofile">Middlename - </string>
    <string name="usernameprofile">Username - </string>
    <string name="thirdnameprofile">Lastname - </string>
    <string name="pwd">Password</string>
    <string name="rememberme">Remember me</string>
    <string name="forgotpwd"><u>Forgot Password?</u></string>
    <string name="forgotpwdd">Forgot Password</string>
    <string name="login">Log in</string>
    <string name="dashboard_text">Dashboard</string>
    <string name="detailpage">Detail Page</string>
    <string name="runningjob">Running Job</string>
    <string name="timesheet">Timesheet</string>
    <string name="myprofile">My Profile</string>
    <string name="changepwd">Change Password</string>
    <string name="logout">LogOut</string>
    <string name="status">Status -  </string>
    <string name="edit">Edit</string>
    <string name="email">Email -  </string>
    <string name="phoneno">Phone -  </string>
    <string name="updateprofile">Update Profile</string>
    <string name="dob">D.O.B -  </string>
    <string name="role">Role -  </string>
    <string name="description">Description -  </string>
    <string name="savechanges">Save Changes</string>
    <string name="currentpwd">    Current Password -  </string>
    <string name="newpwd">New Password -  </string>
    <string name="reenterpwd">Re-Enter Password -  </string>
    <string name="jobsforyou"><u>Jobs For You</u></string>
    <string name="previousdate">Previous Date</string>
    <string name="nextdate">Next Date</string>
    <string name="startstop_time">Start/Stop Time or Job Change</string>
    <string name="customername">Customer Name</string>
    <string name="jobticketno">Job Ticket No.</string>
    <string name="jobticketno_schedule">Job Ticket No. - </string>
    <string name="jobtype">Job Type:</string>
    <string name="jobtypedash">Job Type</string>
    <string name="boatlocation">Boat Location</string>
    <string name="time">Time</string>
    <string name="estimatehr">Estimated Hours</string>
    <string name="techsupervisor">Tech Supervisor</string>
    <string name="othermem">Other Members</string>
    <string name="partlocation">Part Location</string>
    <string name="techdashnotes">Tech Dash Notes</string>
    <string name="notes">Notes</string>
    <string name="urgentmsg"><u>Urgent Messages</u></string>
    <string name="urgentmsgcmp">Urgent Message</string>
    <string name="pickupjobs"><u>Pick Up Jobs</u></string>
    <string name="customertype">Customer Type</string>
    <string name="region">Region</string>
    <string name="action">Action</string>
    <string name="jobh">Job #</string>
    <string name="uploadimage">Upload Image</string>
    <string name="boatmakeyear"><![CDATA[Boat Make & Year:]]></string>
    <string name="boatmodel"><![CDATA[Boat Model & Length:]]></string>
    <string name="boatname">Boat Name:</string>
    <string name="hullid">Hull ID#:</string>
    <string name="captname">Captain Name:</string>
    <string name="promisedate">Promise Date:</string>
    <string name="techlaborperform"><u>Tech Labor Performed</u></string>
    <string name="enterdesription">Enter Description....</string>
    <string name="enterdesriptioncompose">Enter Description</string>
    <string name="previouslaborcmmnt">View Previous Labor Entries</string>
    <string name="recordnotes_othertechs"><u>Last Off the record note entered for this job</u></string>
    <string name="needpart">Need Parts/Start Repair Process</string>
    <string name="needestimate">Need Estimate from sales</string>
    <string name="changeorder">Need Change Order from service</string>
    <string name="rep">REP:</string>
    <string name="jobselection">Job Selection:</string>
    <string name="serviceinstall"><![CDATA[Service & Installation]]></string>
    <string name="ifbid">(If Bid):</string>
    <string name="qcperson">QC person:</string>
    <string name="supervisor">Supervisor:</string>
    <string name="jobcomplete">Job Complete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="maybe">May be</string>
    <string name="owneraware">Is Caption/Owner aware</string>
    <string name="supplyamount">Supply Amount</string>
    <string name="notbillable">Should any part or all of your time be considered not billable to the customer?</string>
    <string name="doesowner_needtoknow">DOES THE OWNER NEED TO KNOW ANYTHING SPECIFIC OR NEEDS TO FOLLOW UP ON ANYTHING?</string>
    <string name="submit">Submit</string>
    <string name="whodecide">Who would be best to decide if it is finished?</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="fieldempty">Field is empty</string>
    <string name="pwdnotmatch">The passwords does not match!</string>
    <string name="needurgent">Need Urgent</string>
    <string name="partdesc">Part Description</string>
    <string name="howfast">How fast do we need it?</string>
    <string name="approveprice">Does customer need to approve price?</string>
    <string name="selectmanuf">Select Manufacturer</string>
    <string name="techsupportno">Tech Support Contact No.</string>
    <string name="partno">Part No.</string>
    <string name="serialno">Serial No.</string>
    <string name="failuredesc">Failure Description</string>
    <string name="techsupportname">Tech Support Name</string>
    <string name="rmaorcase">RMA# or Case# from MFG tech support</string>
    <string name="doesmanfdeem">Does manufacturer deem this warranty?</string>
    <string name="advancerepl">Advance replacement?</string>
    <string name="needloaner">Need Loaner?</string>
    <string name="partsoldby_seatecch">Was part sold by seatech?</string>
    <string name="notsure">Not Sure</string>
    <string name="needquote">Need Quote</string>
    <string name="additionalnotes">Additional Notes</string>
    <string name="save">Save</string>
    <string name="addmorepart">Add more parts</string>
    <string name="cancel">Cancel</string>
    <string name="returnimmed">Can we return immediately to the job?</string>
    <string name="alreadyscheduled">Are we already scheduled to be back on the job?</string>
    <string name="selectreason">Select appropriate reason:</string>
    <string name="waitingonparts">Waiting on Parts</string>
    <string name="factoryrepair">Factory Repair</string>
    <string name="waitngfrcustmr">Waiting for customer</string>
    <string name="exceptiontoplcy">Exception to policy</string>
    <string name="installation">Installation</string>
    <string name="otherreason">Other reason</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="gender">Gender -  </string>
    <string name="search">Search</string>
    <string name="pickupjobsdr">Pick Up Jobs</string>
    <string name="selectlabrcode">Select Labor Code</string>
    <string name="vacationpaid">TIME VACATION PAID</string>
    <string name="vacationunpaid">TIME VACATION UNPAID</string>
    <string name="sickpaid">TIME SICK PAID</string>
    <string name="sickunpaid">TIME SICK UNPAID</string>
    <string name="enterstarttime">Enter Start time</string>
    <string name="joiningdate">Joining Date -</string>
    <string name="waitingfrcus">Waiting for customer</string>
    <string name="enteramount">Enter amount</string>
    <string name="normal">Normal</string>
    <string name="deadline">Deadline</string>
    <string name="addtechnotes">Add Tech Notes</string>
    <string name="browseimage">Select Image</string>
    <string name="viewtechnotes">View Tech Notes</string>
    <string name="viewtecjnotesvalue">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras sagittis commodo mollis. Fusce rhoncus sapien elit, ac imperdiet turpis pharetra in. Donec eu lectus velit. Cras aliquet posuere mi. Vivamus at elit metus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Vestibulum sed varius tortor, sit amet interdum urna.</string>
    <string name="descriptionnew">Description...</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dashboard_notes"><u>Dashboard Notes</u></string>
    <string name="submitlabor_perform">Submit My Labor Performed for this job</string>
    <string name="addnew_offrecordnote">Add a new Off the record notes for this job</string>
    <string name="addanewoff">Add a new Off the record</string>
    <string name="viewprev_offrecordnote">View Previous Off the Record Notes</string>
    <string name="valuesupplies">Value of supplies used for this job:</string>
    <string name="date">Date</string>
    <string name="paerson">Person</string>
    <string name="comment">Comment</string>
    <string name="datetime"><![CDATA[Date&Time]]></string>
    <string name="notbilled">How many hours should not be billed?</string>
    <string name="whynotbilled">Why should the hours not be billed?</string>
    <string name="nourgentmsg">No Urgent message</string>
    <string name="withoutinter_nopartidatedata">Without internet connection you are not able to fetch particular day jobs.</string>
    <string name="withoutinter_noprenextjob">Without internet connection you are not able to fetch previous or next day jobs.</string>
    <string name="withoutinter_nodailyreport">Without internet connection you are not able to fetch particular day job record.</string>
    <string name="cannotstart_newjob">You can\'t start new Job as a job is already running.</string>
    <string name="nojobs_tostart">You have no job to start.</string>
    <string name="onlystatrt_currentdayjob">You can only start current day job.</string>
    <string name="pleaseselectcode">Please Select Labor Code.</string>
    <string name="backtolist">Back</string>
    <string name="cantselect_futtime">Can\'t select future time</string>
    <string name="uploadedimage"><u>Uploaded Images</u></string>
    <string name="nouploadedimage">No image available</string>
    <string name="jobdes"><u>Job description</u></string>
    <string name="cannt_logoutjobrunning">Can\'t logout, a job is already running.</string>
    <string name="cannt_logoutacknowledge">Can\'t logout, you need to acknowledge all chat messages first.</string>
    <string name="cannt_logoutjobrunningnew">Can\'t submit labor code,  a job is already running.</string>
    <string name="selectjobtype">Please Select Job Type</string>
    <string name="supplyamountreq">Supply amount is required.</string>
    <string name="nodashbrdnotes">No dashboard notes</string>
    <string name="ispartforrepair">Is this part for repair?</string>
    <string name="orpart_forsale">Or a part for sale?</string>
    <string name="quantityNeeded">Quantity Needed</string>
    <string name="manufname">Manufacturer Name</string>
    <string name="manufphonekey">Manufacturer Phone</string>
    <string name="rmareqkey">Rma required</string>
    <string name="manufcommentkey">Comment</string>
    <string name="sendPartReq">Send Parts Request</string>
    <string name="sendRepairReq">Send Repair Request</string>
    <string name="selectneedurgent">Need Urgent?</string>
    <string name="partdesc_empty">Please enter part description</string>
    <string name="weekdate">Week/Date</string>
    <string name="statusmonth">Status</string>
    <string name="viewDetail">View Detail</string>
    <string name="enter">Enter</string>
    <string name="current_date">June, 2016</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
</resources>