<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="frgmcalendar"
            type="teq.development.seatech.Schedule.CalendarFragment"></variable>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<GridView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <!--</GridView>-->
        <!--<teq.development.seatech.Schedule.CalendarCustomView-->
        <!--android:id="@+id/custom_calendar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
        <!--</teq.development.seatech.Schedule.CalendarCustomView>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/previous_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/leftarrow" />

            <TextView
                android:id="@+id/display_current_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/current_date"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/next_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/rightarrow" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/appbasiccolor"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/verysmalltextsize"
            android:paddingTop="@dimen/verysmalltextsize">

            <TextView
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"

                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </LinearLayout>

        <teq.development.seatech.CustomCalendar.AutoGridViewCalendar
            android:id="@+id/calendar_grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="@integer/grid_columnscal"
            android:horizontalSpacing="2dp"
            android:verticalSpacing="2dp"
            android:background="#e5e5e5"
            tools:listitem="@layout/gridtest_item"></teq.development.seatech.CustomCalendar.AutoGridViewCalendar>

    </LinearLayout>
</layout>