<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/dashboardlinebg"
        android:layout_margin="@dimen/smalltextsize"
        android:padding="@dimen/smalltextsize">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/toptext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectreason"
            android:textColor="@color/black"
            android:textSize="@dimen/verysmalltextsize"
            android:textStyle="bold"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/checkboxyes" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbx_wtngparts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallpadding"
            android:text="@string/waitingonparts"
            android:padding="@dimen/smalltextsize"
            android:textColor="@color/black"
            android:button="@drawable/radiocheckbox"
            android:textSize="@dimen/verysmalltextsize" />

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbx_fcrtyrpr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallpadding"
            android:text="@string/factoryrepair"
            android:padding="@dimen/smalltextsize"
            android:textColor="@color/black"
            android:button="@drawable/radiocheckbox"
            android:textSize="@dimen/verysmalltextsize" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbx_wtngcstmr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallpadding"
            android:text="@string/waitngfrcustmr"
            android:padding="@dimen/smalltextsize"
            android:button="@drawable/radiocheckbox"
            android:textColor="@color/black"
            android:textSize="@dimen/verysmalltextsize" />
        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/cbx_exception"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallpadding"
            android:text="@string/exceptiontoplcy"
            android:padding="@dimen/smalltextsize"
            android:button="@drawable/radiocheckbox"
            android:textColor="@color/black"
            android:textSize="@dimen/verysmalltextsize" />
    </LinearLayout>
    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/crosspopup" />

</RelativeLayout>
